examples/invalid_feature_secret/harness_unknown_secret.argx
module invalid.harness_unknown_secret
provider OpenAI { kind external enabled false dry_run_only true requires feature_flag requires approval }
harness H { provider OpenAI secret GhostSecret mode dry_run network denied secrets denied filesystem none }
